[package]

name = "Lolpranz"
version = "0.0.1"
authors = ["Lolirofle <lolipopple@hotmail.com>", "Pranz <jesper.fridefors@gmail.com>"]

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.2dgl]
# git = "https://github.com/Lolirofle/2dgl"
path = "/home/edwin/Programming/Rust/2dgl"
